--- a/Frame/assets/css/style.css
+++ b/Frame/assets/css/style.css
@@ -1,73 +1,104 @@
-*{
-margin: 0px;
-padding: 0px;
-
-
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
-body{
-
-    font-family: 'Open Sans';
+body {
+    font-family: "Open Sans";
+    height: 5000px;
 }
 
-.header{
-
-background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../Img/image_1.jpg');
-background-size: cover;
-background-position: center;
-background-repeat: no-repeat;
-color: beige;
-text-align: center;
- 
+.header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../Img/image_1.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: beige;
+    text-align: center;
 }
 
-.header-box{
-
-
-width: 85%;
-margin: auto;
-padding: 200Px 0;
-
+.header-box {
+    width: 85%;
+    margin: auto;
+    padding: 200px 0;
 }
-.header-box p{
 
+.header-box p {
     font-size: 50px;
     font-weight: 300;
-
 }
 
-.div-butten1{
-
-    background:rgb(20, 31, 180);
+.div-butten1 {
+    background: rgb(20, 31, 180);
     color: bisque;
     padding: 12px 20px;
     border-radius: 7px;
     text-decoration: none;
 }
-.div-butten{
 
-margin-top: 50px;
+.div-butten {
+    margin-top: 50px;
 }
 
-.div-butten2{
-
+.div-butten2 {
     color: bisque;
     padding: 10px 25px;
     border-radius: 7px;
     text-decoration: none;
-    border:2px solid wheat;
+    border: 2px solid wheat;
     border-radius: 10px;
     margin: 15px;
-
 }
-.div-butten1:hover{
+
+.div-butten1:hover {
     background: rgb(0, 17, 255);
-
-
 }
-.div-butten2:hover{
-        background: rgb(255, 255, 255);
-        color: rgb(28, 28, 29);
 
+.div-butten2:hover {
+    background: rgb(255, 255, 255);
+    color: rgb(28, 28, 29);
+}
+
+.services {
+
+    padding: 100px 0;
+}
+.services-box {
+    
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    
+} 
+.service-content {
+    
+    width: 33%;
+}
+
+.services-top-icon {
+    font-size: 65px;
+    color: rgb(132, 148, 228);
+}
+.service-content h3 {
+    color: rgb(132, 148, 228);
+    
+
+    font-size: 28px;
+    padding: 30px 0;
+}
+.service-content p {
+    color: rgb(175, 177, 187);
+    margin-bottom: 25px;
+    width: 85%;
+    line-height:1.3;
+}
+.service-content a {
+    color: rgb(132, 148, 228);
+    text-decoration: none;
+}
+.icon-a{
+    font-size: 10px;
 
 }
